[fix] Fixing modules-right having no margin when there is overflow

--- a/users/aru/etc/waybar/style.css
+++ b/users/aru/etc/waybar/style.css
@@ -61,6 +61,7 @@ window#waybar {
 }
 
 #cpu {
+	margin-left: 10px;
 	color: #689d6a;
 }
 
